Fixed overflow problem

--- a/static/styles.css
+++ b/static/styles.css
@@ -62,6 +62,8 @@ body {
   content: "";
   display: table;
   clear: both;
+  margin-left: 15px;
+  margin-right: 15px;
 }
 
 @media screen and (max-width: 600px) {
